cash: url for app.js, close button to the end of long text

--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script defer src="app.js?v=4"></script>
+  <script defer src="app.js?v=6"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
   <meta name="description" content="В помощ на бегач(к)ите от 5kmrun –
   време, трасета, възсрастова група, пол, темпо,
@@ -352,6 +352,7 @@
       <li>Резерв = Максимален - Пулс в покой</li>
       <li>Работен = Резерв * (Зона)/100 + (Пулс в покой)</li>
     </ul>
+    <button id="closeButtonHelpPulsText">X Затвори</button>
   </dialog>
 </body>
 
