snippets, type button, cash problem

--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script defer src="app.js?v=6"></script>
+  <script defer src="app.js?v=7"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
   <meta name="description" content="В помощ на бегач(к)ите от 5kmrun –
   време, трасета, възсрастова група, пол, темпо,
@@ -300,7 +300,7 @@
       от пистата!</p>
   </dialog>
   <dialog id="modalHelpLevels">
-    <button id="closeButtonHelpLevels">X</button>
+    <button id="closeButtonHelpLevels" type="button">X</button>
     <p>
     <ul>
       <li>Начинаещ/а: по-бърз/а от 5% от бегач(к)ите. Започнал/а е да търчи преди 1 месец.</li>
@@ -315,7 +315,7 @@
     <p>Внимание – недовършена функционалност, нивото се определя по времето, изчислено за равна писта!</p>
   </dialog>
   <dialog id="modalHelpProfileTrack">
-    <button id="closeButtonHelpProfileTrack">X</button>
+    <button id="closeButtonHelpProfileTrack" type="button">X</button>
     <p>
       Опитай се да оцениш профила и трудността на трасето! Можеш да видиш с колко се удължава ако беше равна писта или
       директно избери реалната дължина!
@@ -323,7 +323,7 @@
     <p>Времената на различните трасета също ще се променят!</p>
   </dialog>
   <dialog id="modalHelpPuls">
-    <button id="closeButtonHelpPuls">X</button>
+    <button id="closeButtonHelpPuls" type="button">X</button>
     <p>
       Консултирайте се с лекар!
     </p>
@@ -352,7 +352,7 @@
       <li>Резерв = Максимален - Пулс в покой</li>
       <li>Работен = Резерв * (Зона)/100 + (Пулс в покой)</li>
     </ul>
-    <button id="closeButtonHelpPulsText">X Затвори</button>
+    <button id="closeButtonHelpPulsText" type="button">X Затвори</button>
   </dialog>
 </body>
 
