--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script defer src="app.js?v=9"></script>
+  <script defer src="app.js?v=10"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
   <meta name="description" content="В помощ на бегач(к)ите от 5kmrun –
   време, трасета, възсрастова група, пол, темпо,
@@ -311,8 +311,8 @@
       </li>
     </ul>
     </p>
-
     <p>Внимание – недовършена функционалност, нивото се определя по времето, изчислено за равна писта!</p>
+    <button id="closeButtonHelpLevelsText" type="button">X Затвори</button>
   </dialog>
   <dialog id="modalHelpProfileTrack">
     <button id="closeButtonHelpProfileTrack" type="button">X</button>
