link to the source of the data

--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -194,6 +194,7 @@
     <p>Очаквам всякакви предложения, вкл. формули, каква извадка от бегач(к)и
       да се ползва и пр. и сигнали за бъгове!
     </p>
+    <p><a href="https://runninglevel.com/running-times/5k-times">Източник на данните.</a></p>
     <ul>
       <li>
         <a href="https://github.com/dabidesh/homeworks/tree/master/js/5kmrunCalc">
