--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -136,6 +136,7 @@
     <br />
     <input id="workRateId" class="long" type="text" value="" readonly />
     удара/мин <button id="openButtonHelpPuls" class="help" type="button">?</button><br />
+    <input id="hour" placeholder="час" type="number" min="0" max="59" value="0" />ч
     <input id="min" placeholder="мин" type="number" min="0" max="59" value="4" />м
     <input id="sec" placeholder="сек" type="number" min="0" max="59" value="39" />с/км темпо
     <br />
