--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -348,7 +348,7 @@
       действителната формулите не важат!
     </p>
     <p>
-      Съществуват функционални тесове за определяне на работния/максималния пулс.
+      Съществуват функционални тестове за определяне на работния/максималния пулс.
     </p>
     <ul>
       <li>Максимален = 208 - (0.7 * Възраст)</li>
