--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script defer src="app.js?v=16"></script>
+  <script defer src="app.js?v=17"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
   <meta name="description" content="В помощ на бегач(к)ите от 5kmrun –
   време, трасета, възсрастова група, пол, темпо,
@@ -308,8 +308,8 @@
     <ul>
       <li>Начинаещ/а: по-бърз/а от 5% от бегач(к)ите. Започнал/а е да търчи преди 1 месец.</li>
       <li>Новак/чка: по-бърз/а от 20 % от бегач(к)ите. Започнал/а е да търчи преди 6 месеца.</li>
-      <li>Среден/а: по-бърз/а от 50 % от бегач(к)ите. Започнал/а е да търчи преди 2 години.</li>
-      <li>Напреднал: по-бърз/а от 80 % от бегач(к)ите. Започнал/а е да търчи преди 5 години.</li>
+      <li>Среден/на: по-бърз/а от 50 % от бегач(к)ите. Започнал/а е да търчи преди 2 години.</li>
+      <li>Напреднал/а: по-бърз/а от 80 % от бегач(к)ите. Започнал/а е да търчи преди 5 години.</li>
       <li>Елитен/на: по-бърз/а от 95 % от бегач(к)ите. Започнал/а е да търчи преди повече от 5 години редовно и упорито!
       </li>
     </ul>
