change/add text and set display none for all

--- a/js/interactMathem/index.html
+++ b/js/interactMathem/index.html
@@ -43,18 +43,18 @@
       <button type="button" id="getRandomBin">Дай друго!</button>
     </p>
     <p><button type="button" id="restoreCopy">Възтанови</button> копието!</p>
-    <p>Трийте цифри за по-лесна работа: <input type="number" id="randomBinEditableCopyId" /></p>
+    <p>Трий цифри за по-лесна работа: <input type="number" id="randomBinEditableCopyId" /></p>
     <p><button type="button" id="getDigitsButton">Сложи</button> цифрите в отделни клетки (слага се минус)</p>
     <p id="digitsIdp"></p>
     <ol>
-      <li>Пребройте позициите: <input type="number" id="positionsId" />
+      <li>Преброй позициите: <input type="number" id="positionsId" />
         <button type="button" id="generateElementsAndPositions">Нататък!</button>
         <p id="messageCorrectPositionsId" class="ok display-none"></p>
         <p id="messageInCorrectPositionsId" class="err display-none"></p>
       </li>
-      <li>Попълнете цифрите и позициите (цифра<sup>позиция</sup>)(печелиш плюс, ако позициите са поредни):</li>
+      <li>Попълни цифрите и позициите (цифра<sup>позиция</sup>)(печелиш плюс, ако позициите са поредни):</li>
       <p id="elementsAndPositionsId" class="display-none"></p>
-      <li>Напишете израза (* – умножение, ^ – степенуване):
+      <li>Напиши израза (* – умножение, ^ – степенуване, + – събиране):
         <input type="string" id="expressionBinToDecId" />
         <button type="button" id="verifyBinToDecButton">Готово!</button>
       </li>
