digits and positions

--- a/js/interactMathem/index.html
+++ b/js/interactMathem/index.html
@@ -54,6 +54,8 @@
       </li>
       <li>Попълни цифрите и позициите (цифра<sup>позиция</sup>)(печелиш плюс, ако позициите са поредни):</li>
       <p id="elementsAndPositionsId" class="display-none"></p>
+      <p id="messageCorrectMatchingId" class="ok display-none"></p>
+      <p id="messageInCorrectMatchingId" class="err display-none"></p>
       <li>Напиши израза (* – умножение, ^ – степенуване, + – събиране):
         <input type="string" id="expressionBinToDecId" />
         <button type="button" id="verifyBinToDecButton">Готово!</button>
