display block and clear inputs

--- a/js/interactMathem/index.html
+++ b/js/interactMathem/index.html
@@ -45,7 +45,7 @@
     <p><button type="button" id="restoreCopy">Възтанови</button> копието!</p>
     <p>Трий цифри за по-лесна работа: <input type="number" id="randomBinEditableCopyId" /></p>
     <p><button type="button" id="getDigitsButton">Сложи</button> цифрите в отделни клетки (слага се минус)</p>
-    <p id="digitsIdp"></p>
+    <p id="digitsIdp" class="display-none"></p>
     <ol>
       <li>Преброй позициите: <input type="number" id="positionsId" />
         <button type="button" id="generateElementsAndPositions">Нататък!</button>
