--- a/js/interactMathem/index.html
+++ b/js/interactMathem/index.html
@@ -57,8 +57,10 @@
       <p id="messageCorrectMatchingId" class="ok display-none"></p>
       <p id="messageInCorrectMatchingId" class="err display-none"></p>
       <li>Напиши израза (* – умножение, ^ – степенуване, + – събиране):
-        <input type="string" id="expressionBinToDecId" />
+        <input type="text" id="expressionBinToDecId" />
         <button type="button" id="verifyBinToDecButton">Готово!</button>
+        <p id="messageCorrectExpressionId" class="ok display-none"></p>
+        <p id="messageInCorrectExpressionId" class="err display-none"></p>
       </li>
     </ol>
   </main>
