--- a/js/interactMathem/index.html
+++ b/js/interactMathem/index.html
@@ -47,15 +47,16 @@
     <p><button type="button" id="getDigitsButton">Сложи</button> цифрите в отделни клетки (слага се минус)</p>
     <p id="digitsIdp" class="display-none"></p>
     <ol>
-      <li>Преброй позициите: <input type="number" id="positionsId" />
+      <li>Преброй позициите: <input type="number" id="positionsId">
         <button type="button" id="generateElementsAndPositions">Нататък!</button>
         <p id="messageCorrectPositionsId" class="ok display-none"></p>
         <p id="messageInCorrectPositionsId" class="err display-none"></p>
       </li>
-      <li>Попълни цифрите и позициите (цифра<sup>позиция</sup>)(печелиш плюс, ако позициите са поредни):</li>
-      <p id="elementsAndPositionsId" class="display-none"></p>
-      <p id="messageCorrectMatchingId" class="ok display-none"></p>
-      <p id="messageInCorrectMatchingId" class="err display-none"></p>
+      <li>Попълни цифрите и позициите (цифра<sup>позиция</sup>)(печелиш плюс, ако позициите са поредни):
+        <p id="elementsAndPositionsId" class="display-none"></p>
+        <p id="messageCorrectMatchingId" class="ok display-none"></p>
+        <p id="messageInCorrectMatchingId" class="err display-none"></p>
+      </li>
       <li>Напиши израза (* – умножение, ^ – степенуване, + – събиране):
         <input type="text" id="expressionBinToDecId" />
         <button type="button" id="verifyBinToDecButton">Готово!</button>
