add project in focus

--- a/index.html
+++ b/index.html
@@ -1,66 +1,63 @@
 <!DOCTYPE html>
 <html lang="bg">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Домашни работи и екстри</title>
-    <meta
-      name="description"
-      content="Домашни работи и екстри: CSS3, js, html5, masm"
-    />
 
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Домашни работи и екстри</title>
+  <meta name="description" content="Домашни работи и екстри: CSS3, js, html5, masm" />
 
-      html {
-        font-size: 24px;
-        line-height: 2em;
-      }
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-      #konti {
-        width: 60%;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    </style>
-  </head>
+    html {
+      font-size: 24px;
+      line-height: 2em;
+    }
 
-  <body>
-    <div id="konti">
-      <h1>Домашни работи и екстри</h1>
-      <ul>
-        <li><a href="./5/1/index.html">5/1] Квадрат към кръг</a></li>
-        <li>
-          <a href="./5/2/index.html">5/2] Вертикално меню (идат отляво)</a>
-        </li>
-        <li>
-          <a href="./5/3/index.html"
-            >5/3] Вертикално меню с анимация (падат отгоре)</a
-          >
-        </li>
-        <li><a href="./7/1/index.html">7/1 Грид</a></li>
-        <li><a href="./7/2/index.html">7/2</a></li>
-        <li><a href="./7/3/index.html">7/3</a></li>
-        <li><a href="./7/4/index.html">7/4</a></li>
-        <li><a href="./7/5/index.html">7/5] 3 колони, хедър и футер</a></li>
-        <li><a href="./8/2/index.html">8/2</a></li>
-        <li><a href="./8/3/index.html">8/3</a></li>
-        <li><a href="./8/3/index.html">8/3</a></li>
-        <li>
-          <a href="./%D1%87%D0%B8%D1%81%D1%82-css/vert-menu-pure-css.html"
-            >Вертикално субменю</a
-          >
-        </li>
-        <li><a href="./js/life0.html">Живот</a></li>
-        <li><a href="./js/cath-the-mouse/index.html">Хвани мишлето!</a></li>
-        <li><a href="./js/orli.html">Орли, змии и мишки</a></li>
-        <li><a href="./js/custom-tooltip-me.html">Персонализирана балонна помощ</a></li>
-      </ul>
-    </div>
-  </body>
+    #konti {
+      width: 60%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="konti">
+    <h1>Домашни работи и екстри</h1>
+    <h2><a href="https://dabidesh.github.io/homeworks/js/5kmrunCalc/">Проект на фокус: 5kmrunCalc (търчане с 5kmrun)</a>
+    </h2>
+    <ul>
+      <li><a href="./5/1/index.html">5/1] Квадрат към кръг</a></li>
+      <li>
+        <a href="./5/2/index.html">5/2] Вертикално меню (идат отляво)</a>
+      </li>
+      <li>
+        <a href="./5/3/index.html">5/3] Вертикално меню с анимация (падат отгоре)</a>
+      </li>
+      <li><a href="./7/1/index.html">7/1 Грид</a></li>
+      <li><a href="./7/2/index.html">7/2</a></li>
+      <li><a href="./7/3/index.html">7/3</a></li>
+      <li><a href="./7/4/index.html">7/4</a></li>
+      <li><a href="./7/5/index.html">7/5] 3 колони, хедър и футер</a></li>
+      <li><a href="./8/2/index.html">8/2</a></li>
+      <li><a href="./8/3/index.html">8/3</a></li>
+      <li><a href="./8/3/index.html">8/3</a></li>
+      <li>
+        <a href="./%D1%87%D0%B8%D1%81%D1%82-css/vert-menu-pure-css.html">Вертикално субменю</a>
+      </li>
+      <li><a href="./js/life0.html">Живот</a></li>
+      <li><a href="./js/cath-the-mouse/index.html">Хвани мишлето!</a></li>
+      <li><a href="./js/orli.html">Орли, змии и мишки</a></li>
+      <li><a href="./js/custom-tooltip-me.html">Персонализирана балонна помощ</a></li>
+    </ul>
+  </div>
+</body>
+
 </html>
