--- a/js/interactMathem/complex.html
+++ b/js/interactMathem/complex.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <script defer src="script.js?v=1"></script>
   <script defer src="complex.js?v=1"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -25,6 +26,7 @@
 <body>
   <main id="main">
     <h1>Комплексни числа</h1>
+    <p id="links"></p>
     <textarea id="inputComplexNumbers"></textarea>
     <button type="button" id="getExpressions">Дай!</button>
     <br>
@@ -33,7 +35,9 @@
     <br>
     z1/z2: <input id="outZ1DivideZ2" type="text">
     <button type="button" class="copy">Копирай!</button>
-
+    <br>
+    z1*z2*z3: <input id="outZ1MultipleZ2MultipleZ3" type="text">
+    <button type="button" class="copy">Копирай!</button>
 
   </main>
 </body>
