--- a/js/interactMathem/index.html
+++ b/js/interactMathem/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <script defer src="script.js?v=2"></script>
   <script defer src="app.js?v=0"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -37,6 +38,7 @@
 <body>
   <main>
     <h1>Фундаменти в математиката</h1>
+    <p id="links"></p>
     <h2>Бройни системи</h2>
     <h3>Двоична в десетична</h3>
     <p>Случайно двоично: <input type="number" id="randomBinId" readonly />
