--- a/js/interactMathem/area.html
+++ b/js/interactMathem/area.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <script defer src="script.js?v=1"></script>
   <script defer src="area.js?v=1"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -25,6 +26,7 @@
 <body>
   <main>
     <h1>Площ, формула на Гаус</h1>
+    <p id="links"></p>
     <textarea id="inputCoordinates"></textarea>
     <button type="button" id="getCoordinates">Вземи!</button>
 
