--- a/js/interactMathem/complex.html
+++ b/js/interactMathem/complex.html
@@ -38,6 +38,10 @@
     <br>
     z1*z2*z3: <input id="outZ1MultipleZ2MultipleZ3" type="text">
     <button type="button" class="copy">Копирай!</button>
+    <br>
+    <br>
+    z1 z2 z3: <input id="outZ1Z2Z3" type="text">
+    <button type="button" class="copy">Копирай!</button>
 
   </main>
 </body>
