vars clear add py and"=0"

--- a/js/python/vars.html
+++ b/js/python/vars.html
@@ -9,5 +9,8 @@
 <body>
   <input type="text" id="vars">
   <input type="text" id="out"><button>Copy</button>
+  <button id="clear">Clear</button>
+  <button id="py">.py</button>
+  <button id="nulli"> = 0</button>
 </body>
 </html>
