--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -8,7 +8,7 @@
   <script defer src="app.js?v=18"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
   <meta name="description" content="В помощ на бегач(к)ите от 5kmrun –
-  време, трасета, възсрастова група, пол, темпо,
+  време, трасета, възрастова група, пол, темпо,
     скорост, възрастово постижение, ниво - процент от бегач(к)ите,
     поправка за различните трасета, пулс." />
 
