read url parameters not final

--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script defer src="app.js?v=18"></script>
+  <script defer src="app.js?v=20"></script>
   <title>Търчане с 5kmrun – калкулатор</title>
   <meta name="description" content="В помощ на бегач(к)ите от 5kmrun –
   време, трасета, възрастова група, пол, темпо,
@@ -93,7 +93,8 @@
       <option id="realPlovdivId" value="5008">„Гребен канал 2“, гр. Пловдив</option>
     </select><br />
     <select id="ageId">
-      <option value="0">Възр.</option>
+      <option value="-">Възр.</option>
+      <option value="0">0÷9</option>
       <option value="1">10÷14</option>
       <option value="2">15÷19</option>
       <option value="3">20÷24</option>
