--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -76,7 +76,7 @@
 </head>
 
 <body>
-  <h1 id="up">Търчане с <a href="https://5kmrun.bg/" title="Свободно, но организирано бягане ...">5kmrun</a><button id="openButtonShare" class="help" type="button">Сп.</button></h1>
+  <h1 id="up">Търчане с <a href="https://5kmrun.bg/" title="Свободно, но организирано бягане ...">5kmrun</a> <button id="openButtonShare" class="help" type="button">Сп.</button></h1>
   <form id="run">
     <input id="hourTime" placeholder="час" type="number" min="0" max="99" value="00" />ч
     <input id="minTime" placeholder="мин" type="number" min="0" max="59" value="23" />м
@@ -173,9 +173,9 @@
   </form>
   <details id="detailsId" open>
     <summary id="summaryId">Инфо, сътрудници, бъгове</summary>
-    <p>Калкулатора е в начална фаза на разработка и не всички функции работят точно!</p>
-    <p>Променяйки всяко едно от полетата – време, трасе, възрастова група, пол, темо, средна скорост, възрастово
-      постижение (на база времето без да се отчита трудността на трасето – това е минималното възрастово постижение),
+    <p>Калкулаторът е в начална фаза на разработка и не всички функции работят точно!</p>
+    <p>Променяйки всяко едно от полетата – време, трасе, възрастова група, пол, темпо, средна скорост, възрастово
+      постижение (на база времето без да се отчита трудността на трасето – това е минималното възрастово постижение), възрастово постижение за равна писта (една от основните цели на 5kmrunCalc – работното име на калкулатора)
       оценка на трудността на трасето (денивелация, изкачвания), дължина на изчислената равна писта, се променят
       останалите полета. В бъдеще ще могат да се променят всички полета.</p>
     <p>Основния проблем е как да се определят трудностите на отделните трасета. Текущия ми подход е това да стане
@@ -356,6 +356,9 @@
       <li>Резерв = Максимален - Пулс в покой</li>
       <li>Работен = Резерв * (Зона)/100 + (Пулс в покой)</li>
     </ul>
+
+    <p><strong>Внимание: </strong>това е една от най-точните формули, но грешката ѝ е <strong>±20 удара за
+      минута!</strong> Пулса в покой също варира, тъй че стойността на работния пулс е с още по-голяма грешка.</p>
     <button id="closeButtonHelpPulsText" type="button">X Затвори</button>
   </dialog>
   <dialog id="modalAge">
