--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -175,7 +175,7 @@
     <summary id="summaryId">Инфо, сътрудници, бъгове</summary>
     <p>Калкулаторът е в начална фаза на разработка и не всички функции работят точно!</p>
     <p>Променяйки всяко едно от полетата – време, трасе, възрастова група, пол, темпо, средна скорост, възрастово
-      постижение (на база времето без да се отчита трудността на трасето – това е минималното възрастово постижение), възрастово постижение за равна писта (една от основните цели на 5kmrunCalc – работното име на калкулатора)
+      постижение (на база времето без да се отчита трудността на трасето – това е минималното възрастово постижение), възрастово постижение за равна писта (една от основните цели на 5kmrunCalc – работното име на калкулатора),
       оценка на трудността на трасето (денивелация, изкачвания), дължина на изчислената равна писта, се променят
       останалите полета. В бъдеще ще могат да се променят всички полета.</p>
     <p>Основния проблем е как да се определят трудностите на отделните трасета. Текущия ми подход е това да стане
@@ -195,7 +195,7 @@
       търчали по всички трасета, <strong>включително равна писта</strong>.
     </p>
     <p>Очаквам всякакви предложения, вкл. формули, каква извадка от бегач(к)и
-      да се ползва и пр. и сигнали за бъгове!
+      да се ползва и сигнали за бъгове!
     </p>
     <p><a href="https://runninglevel.com/running-times/5k-times">Източник на данните.</a></p>
     <ul>
