--- a/js/openLayers/index-cdn.html
+++ b/js/openLayers/index-cdn.html
@@ -32,7 +32,17 @@
     <input type="number" id="latitude" name="latitude" step="any">
     <label for="altitude">Altitude:</label>
     <input type="number" id="altitude" name="altitude" step="any">
-    <button id="updateButton">Update Map</button>
+    <button type="button" id="updateButton">Update Map</button>
+    <select id="zoomLevel">
+      <option value="0">целият свят</option>
+      <option value="3">континенти</option>
+      <option value="8">страни</option>
+      <option value="12">градове</option>
+      <option value="15">улици</option>
+      <option value="19">сгради</option>
+    </select>
+    <button id="increaseTextSize">Increase Text Size</button>
+    <button id="decreaseTextSize">Decrease Text Size</button>
   </div>
   <div id="map"></div>
   <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v6.4.3/build/ol.js"></script>
