--- a/js/openLayers/index-cdn.html
+++ b/js/openLayers/index-cdn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <title>OpenLayers Map Center</title>
@@ -41,8 +41,8 @@
       <option value="15">улици</option>
       <option value="19">сгради</option>
     </select>
-    <button id="increaseTextSize">Increase Text Size</button>
-    <button id="decreaseTextSize">Decrease Text Size</button>
+    <button type="button" id="increaseTextSize">Increase Text Size</button>
+    <button type="button" id="decreaseTextSize">Decrease Text Size</button>
   </div>
   <div id="map"></div>
   <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v6.4.3/build/ol.js"></script>
