--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -152,7 +152,7 @@
     <input id="achievementKgInfo" class="toLong" type="text" value="" readonly /><br />
     <input id="achievementKg" class="toLong" type="text" value="" readonly /><br />
     <button id="openButtonAge" type="button">Ако беше друга възраст</button><br />
-    <button id="openAnotherDistances" type="button">Други разтояния</button><br />
+    <button id="openAnotherDistances" type="button">Други разстояния (равно)</button><br />
     <input id="elevId" class="long" type="number" value="56" step="1" /> денив./изк.
     <button id="openButtonHelpProfileTrack" class="help" type="button">?</button><br />
     <input id="realFlatDistId" class="long" type="number" value="5626" step="1" /> м равна писта<br />
@@ -397,7 +397,7 @@
   </dialog>
   <dialog id="modalAnotherDistances">
     <button id="closeAnotherDistances" type="button">X</button>
-    <h2>Предсказание за други разтояния</h2>
+    <h2>Предсказание за други разстояния</h2>
     <input id="time21" class="long" type="text" value="" readonly /> Полум. (21.098 км)<br />
   </dialog>
 </body>
