--- a/js/5kmrunCalc/index.html
+++ b/js/5kmrunCalc/index.html
@@ -399,6 +399,7 @@
     <button id="closeAnotherDistances" type="button">X</button>
     <h2>Предсказание за други разстояния</h2>
     <input id="time21" class="long" type="text" value="" readonly /> Полум. (21.098 км)<br />
+    <input id="time42" class="long" type="text" value="" readonly /> Маратон (42.195 км)<br />
   </dialog>
 </body>
 
